src/objects/BVA__c.object
<CustomObject>
    <fields>
        <fullName>BVA_Kickoff_Date__c</fullName>
        <inlineHelpText>The expected date of the first interview</inlineHelpText>
        <label>BVA Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the business model has been attached to the opportunity</inlineHelpText>
        <label>Business Model Attached to Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Sheet_Supplied__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates if a deal sheet was supplied</inlineHelpText>
        <label>Deal Sheet Supplied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EB_Definition_of_Good__c</fullName>
        <inlineHelpText>Description of &apos;what&apos; the EB described as a &apos;good&apos; outcome from the BVA (Pay-back period; ROI; Main Benefit areas, etc...)</inlineHelpText>
        <label>EB Definition of Good</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Echo_Back_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To confirm that the echo back meeting took place</inlineHelpText>
        <label>Echo Back Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Echo_Back_Date__c</fullName>
        <inlineHelpText>The scheduled date of the echo-back to the Economic Buyer</inlineHelpText>
        <label>Echo Back Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Echo_back_PPT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the echo-back PPT has been attached to the opportunity</inlineHelpText>
        <label>Echo-back PPT Attached to Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_BVA_Meeting_Date__c</fullName>
        <inlineHelpText>Scheduled Date to meet with the EB to propose BVA and get answer to 3 questions</inlineHelpText>
        <label>Economic Buyer BVA Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_EB_Meeting_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To confirm that the EB meeting took place</inlineHelpText>
        <label>Economic Buyer (EB) Meeting Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer_EB_Sponsorship_Confirme__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether the EB was happy to sponsor BVA</inlineHelpText>
        <label>Economic Buyer Sponsorship Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>General_BVA_Comments__c</fullName>
        <inlineHelpText>Used to add any relevant notes about the BVA</inlineHelpText>
        <label>General BVA Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_BVA_Review_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To confirm that the internal review meeting took place</inlineHelpText>
        <label>Internal BVA Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_BVA_review_meeting_date__c</fullName>
        <inlineHelpText>Scheduled Date of the internal meeting to decide on a Go/No-Go for the BVA (Attended by the FSR/ISR, Sales Manager, BVC, SE)</inlineHelpText>
        <label>Internal BVA review meeting date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Introductory_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Confirms whether EB sent the introductory email</inlineHelpText>
        <label>Introductory Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Interviews__c</fullName>
        <inlineHelpText>The number of interviews held as part of the BVA</inlineHelpText>
        <label>Number of Interviews</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_People_in_TDDs__c</fullName>
        <inlineHelpText>Indicates the number of people that have been through a TDD _before_ the BVA</inlineHelpText>
        <label>Number of People in TDDs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_People_interviewed__c</fullName>
        <inlineHelpText>The total number of people interviewed as part of the BVA</inlineHelpText>
        <label>Number of People interviewed</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BVAs</relationshipLabel>
        <relationshipName>BVAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Pipeline:BVA known, no definite date set
Scheduled:EB meeting set; list of interviewees created;date set for interview
In Progress:After EB meeting;before EB echo-back
Complete:Echo-back to EB completed
Abandoned: BVA stopped;FSR/ISR says not required</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abandoned</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value_Pyramid_Supplied__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether a Value Pyramid was supplied</inlineHelpText>
        <label>Value Pyramid Supplied</label>
        <type>Checkbox</type>
    </fields>
    <label>BVA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BVA_Detail</fullName>
        <columns>Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>My BVAs - Detail</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Whole_team</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>BVA_Kickoff_Date__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Status__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pipeline</value>
        </filters>
        <label>Whole team - Pipeline</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BVA-{0}</displayFormat>
        <label>BVA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BVAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>